[package]
name = "comment-strip"
version = "0.1.3"
authors = ["Felix Stegmaier <stegmaier.felix@gmail.com>"]
license = "MIT"
description = "Remove comments out of text files"
repository = "https://github.com/XOSplicer/comment-strip"
readme = "README.md"
keywords = ["delete", "remove", "strip", "comments", "commandline"]
categories = ["command-line-utilities", "text-processing"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[badges]
travis-ci = { repository = "XOSplicer/comment-strip", branch = "master" }

[dependencies]
clap = { version = "2.25.0", features = ["yaml"] }
quick-error = "1.2.0"
